# ShanghaiTech-Computer-Graphic-I-Final-Project

./: .gitignore  README.md  simulate.bat
Coding/: CMakeLists.txt
Coding/include/: camera.hpp  cloth.hpp  cloth_renderer.hpp  cloth_simulator.hpp  define.hpp  shader.hpp
Coding/res/shader/: cloth.fs  cloth.vs
Coding/src/: camera.cpp  cloth.cpp  cloth_renderer.cpp  cloth_simulator.cpp  main.cpp  shader.cpp
Report/: assignment.tex  report.tex
